--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -75,6 +75,7 @@
     <Compile Include="BL\Gender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\MsgBox.cs" />
     <Compile Include="UI\ShuffleControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -84,6 +85,7 @@
     <Compile Include="UI\ShuffleController.cs" />
     <Compile Include="UI\StepController.cs" />
     <Compile Include="BL\TournamentData.cs" />
+    <Compile Include="UI\TournametDataSaveLoad.cs" />
     <EmbeddedResource Include="UI\EnterPlayersControl.resx">
       <DependentUpon>EnterPlayersControl.cs</DependentUpon>
     </EmbeddedResource>
