--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -57,6 +57,8 @@
     <Compile Include="BL\CompaniesCollection.cs" />
     <Compile Include="BL\Company.cs" />
     <Compile Include="BL\Group.cs" />
+    <Compile Include="BL\Match.cs" />
+    <Compile Include="BL\MatchesCollection.cs" />
     <Compile Include="UI\EnterPlayersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,6 +79,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\MsgBox.cs" />
+    <Compile Include="UI\SheduleAndResultsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\SheduleAndResultsControl.Designer.cs">
+      <DependentUpon>SheduleAndResultsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\SheduleAndResultsController.cs" />
     <Compile Include="UI\ShuffleControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -103,6 +112,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\SheduleAndResultsControl.resx">
+      <DependentUpon>SheduleAndResultsControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ShuffleControl.resx">
       <DependentUpon>ShuffleControl.cs</DependentUpon>
     </EmbeddedResource>
