--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BL\Group.cs" />
     <Compile Include="BL\Match.cs" />
     <Compile Include="BL\MatchesCollection.cs" />
+    <Compile Include="BL\MatchProgress.cs" />
     <Compile Include="UI\EnterPlayersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -79,13 +80,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\MsgBox.cs" />
-    <Compile Include="UI\SheduleAndResultsControl.cs">
+    <Compile Include="UI\ScheduleAndResultsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\SheduleAndResultsControl.Designer.cs">
-      <DependentUpon>SheduleAndResultsControl.cs</DependentUpon>
+    <Compile Include="UI\ScheduleAndResultsControl.Designer.cs">
+      <DependentUpon>ScheduleAndResultsControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\SheduleAndResultsController.cs" />
+    <Compile Include="UI\ScheduleAndResultsController.cs" />
     <Compile Include="UI\ShuffleControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -112,8 +113,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UI\SheduleAndResultsControl.resx">
-      <DependentUpon>SheduleAndResultsControl.cs</DependentUpon>
+    <EmbeddedResource Include="UI\ScheduleAndResultsControl.resx">
+      <DependentUpon>ScheduleAndResultsControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\ShuffleControl.resx">
       <DependentUpon>ShuffleControl.cs</DependentUpon>
