--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>EnterPlayersControl.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\EnterPlayersController.cs" />
+    <Compile Include="BL\Game.cs" />
     <Compile Include="UI\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
