Add icon to window.

--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UI\ScheduleAndResultsControl.resx">
       <DependentUpon>ScheduleAndResultsControl.cs</DependentUpon>
@@ -140,6 +141,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\appIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\appIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
