Make everything serializable. Part 2. Reorganization of data relations. Add first UT.

--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BL\CompaniesCollection.cs" />
     <Compile Include="BL\Company.cs" />
     <Compile Include="BL\Group.cs" />
+    <Compile Include="BL\IRepository.cs" />
     <Compile Include="BL\Match.cs" />
     <Compile Include="BL\MatchesCollection.cs" />
     <Compile Include="BL\MatchProgress.cs" />
