--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CompaniesCollectionTest.cs" />
+    <Compile Include="TournametDataSaveLoadTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tournament Planner\Tournament Planner.csproj">
