--- a/Tournament Planner/Tournament Planner.csproj
+++ b/Tournament Planner/Tournament Planner.csproj
@@ -116,6 +116,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\MsgBox.cs" />
+    <Compile Include="UI\PlayOffControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\PlayOffControl.Designer.cs">
+      <DependentUpon>PlayOffControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\PlayOffController.cs" />
     <Compile Include="UI\ScheduleAndResultsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -159,6 +166,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\PlayOffControl.resx">
+      <DependentUpon>PlayOffControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ScheduleAndResultsControl.resx">
       <DependentUpon>ScheduleAndResultsControl.cs</DependentUpon>
     </EmbeddedResource>
